# GeoAnomalyMapper

./: .env.example  .gitattributes  .gitignore  ARCHITECTURE_v2.md  AUTOMATED_DOWNLOAD_GUIDE.md  CHANGELOG.md  CODE_REVIEW_FINAL.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  COMPREHENSIVE_FREE_DATA_CATALOG.md  CONTEXT.md  DATA_ACQUISITION_GUIDE.md  DATA_DOWNLOAD_COMPLETE_REPORT.md  DATA_DOWNLOAD_STATUS.md  ENHANCED_PROCESSING_REPORT.md  FINAL_TARGET_REPORT.md  FIXES_APPLIED.md  GRAVITY_INVERSION_REPORT.md  GeoAnomalyMapper_ Advanced Anomaly Detection (1).txt  HIGH_RESOLUTION_DATA_GUIDE.md  INSAR_DATA_GUIDE.md  LICENSE  MANIFEST.in  MINERAL_EXPLORATION_GUIDE.md  MODEL_CALIBRATION_FIXES.md  Makefile  PIPELINE_AUDIT.md  PROJECT_STATUS.md  Phase0_Execution_Blueprint.md  Phase2_Data_Pipeline_Backbone_Outline.md  Phase5_Production_Readiness_Blueprint.md  QUICKSTART.md  QUICKSTART_HIRES.md  README.md  ROBUSTNESS_IMPROVEMENTS.md  SECURITY.md  SUPERVISED_LEARNING_REPORT.md  VALIDATION_RESULTS.md  WINDOWS_QUICKSTART.md  alaska_analysis.py  (+195 more)
.github/workflows/: ci.yml  globe_viewer.yml  validation-first-ci.yml
GeoAnomalyMapper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
archaeo_intel/: README.md  __init__.py  catalog.py  closure.py  composite.py  corona.py  data_access.py  detect.py  triage.py
archive/: align_rasters.py  analyze_variogram.py  batch_workflow.py  build_usa_mosaics.py  check_coords.py  classify_anomalies.py  classify_supervised_backup.py  classify_supervised_optimized.py  config.yaml  config_mining.yaml  convert_mag_to_float.py  create_validation_mask.py  create_visualization.py  debug_coords.py  debug_error.md  debug_probe.py  detect_voids.py  diagnostic_fix.py  diagnostic_match.py  download_licsar.py  download_usa_coherence.py  extracted_targets.csv  fetch_lithology_density.py  fix_targets_final.py  generate_residual.py  monitor_validation.py  phase6_visualization.py  phase7_extraction.py  phase8_spatial_analysis.py  phase9_visualization.py  run_usa_supervised.py  test_gpu.py  undiscovered_targets.csv  validate_against_known_features.py  validate_california.py  validate_usa_supervised.py
archive/tests/: test_batch_workflow_integration.py
archive/verification/: run_verification.py  verify_geography.py  verify_land_status.py
audit_handoff/: PROMPT.md  embedding_target_discovery.py  pinn_vibro_inversion.py  project_paths.py  satellite_embeddings.py  visualize_3d_subsurface.py
config/: config.json.example  data_sources.yaml  fusion.yaml  serving.yaml  tiling_zones.yaml  training.yaml
config/production/: production.yaml
configs/: data_sources.yaml
dashboard/: app.py  presets.py
dashboard/.streamlit/: secrets.example.toml
dashboard/pages/: 3_3D_Globe.py
data/: data_status.json  download_status.json
data/archaeo/: menze_ur_catalog.npz
data/outputs/: FINAL_PROJECT_REPORT.md  UNDERGROUND_ANOMALY_DETECTION_REPORT.md
deformation_intel/: README.md  __init__.py  context.py  detect.py  opera.py  sources.py  sweep.py  timeseries.py
deployment/: Makefile  README.md
docs/: ADVISORY_REPORT.md  API_REFERENCE.md  CLAIM_RECOMMENDATION.md  CONFIGURATION_GUIDE.md  CORONA.md  CRITIQUE.md  DEVELOPER_GUIDE.md  DISCOVERY_SOP.md  DYNAMIC_WEIGHTING_GUIDE.md  FORENSIC_AUDIT_REPORT.md  GeoAnomalyMapper_Rebuild_Master_Guide.md  MIGRATION_GUIDE.md  MONETIZATION.md  NATIONAL_SCAN_REPORT.md  PITCH_DECK.md  Phase3_Scientific_Core_Blueprint_Outline.md  README.md  RESCAN_V2_REPORT.md  RESEARCH_PAPER.md  RESEARCH_TRACKS.md  SCIENTIFIC_VALIDATION_REPORT.md  SCREENING_PACK_TEMPLATE.md  TROUBLESHOOTING.md  VALIDATION_FIRST_WORKFLOW.md  VALIDATION_REPORT.md  WESTHUNT_BALIKH_REPORT.md  WHAT_WE_CAN_SELL.md  architecture.md  conf.py  gam.core.rst  gam.ingestion.rst  gam.modeling.rst  gam.preprocessing.rst  gam.rst  gam.visualization.rst  index.html  index.rst  modules.rst  rescan_v2_results.json  scientific_methods.md  (+1 more)
gam/: __init__.py
release/: build_release.py  release_checklist.md
scripts/: deploy.sh  health_check.py  run_carlsbad.py  scan_vacaville.py  setup_env.sh
security/: scan_dependencies.py
showcase/: GeoAnomalyMapper_Showcase.html  generate_pdf.py
tests/: conftest.py  test_api.py  test_archaeo_closure.py  test_archaeo_intel.py  test_blind_validation.py  test_cli_integration.py  test_compatibility.py  test_dashboard.py  test_data_validation.py  test_deformation_context.py  test_deformation_detect.py  test_deformation_opera_subsample.py  test_deformation_sources.py  test_deformation_timeseries.py  test_earthdata_auth.py  test_embedding_analysis.py  test_full_kill_test_manifest_mapping.py  test_globe_viewer.py  test_incremental_kill_test.py  test_ingestion.py  test_integration.py  test_integration_api.py  test_integration_pipeline.py  test_kml_export.py  test_modeling.py  test_opera_parallel.py  test_performance.py  test_pipeline_v2.py  test_preprocessing.py  test_presets.py  test_release_hardening.py  test_satellite_embeddings.py  test_sweep.py  test_synthetic_positive_control_end_to_end.py  test_target_local_slc.py  test_tiles_builder.py  test_validation_fixes.py  test_visualization.py  test_weight_calculator.py
utils/: __init__.py  config.py  config_shim.py  data_fetcher.py  error_handling.py  feature_engineering.py  insar_tools.py  land_mask.py  paths.py  paths_shim.py  raster_io.py  raster_utils.py  snap_templates.py
v2/: CONTEXT.md  elastic_pinn.py  gravity_fetcher.py  run_v2.py
v2_src/: README.md  convert_xgm2019e_to_grid.py  convert_xgm_to_geotiff.py  create_enhanced_reports.py  create_enhanced_visualization.py
validation_examples/: campaign_registry_template.json  field_verification_template.json  public_manifest_campaign_scaffold.json  public_manifest_fixture.json  public_manifest_real_holdout_scaffold.json  public_manifest_real_template.json  public_manifest_sar_comparison_template.json  robustness_ablation_plan_template.json  validation_parameter_set_template.json  withheld_labels_fixture.json  withheld_labels_template.json
verification/: analyze_targets.py  download_shapefile.py  verify_pipeline.py  verify_visual.py
(+243 files in other folders)
