[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoanomaly-mapper"
version = "0.1.0"
description = "Validation-first SAR Doppler tomography research workflow for blind known-void detection."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "GeoAnomalyMapper maintainers" }
]
keywords = ["sar", "validation", "geophysics", "subsurface", "blind-validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "rasterio>=1.3.0",
  "pyproj>=3.5.0",
  "PyWavelets>=1.4.0",
  "scikit-image>=0.20.0",
  "scikit-learn>=1.2.0",
  "scikit-gstat>=1.0.0",
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "tqdm>=4.65.0",
  "matplotlib>=3.7.0",
  "python-dateutil>=2.8",
  "shapely>=2.0.0",
  "requests>=2.28.0",
  "geopandas>=0.14.0",
  "pyogrio>=0.7.0",
  "beautifulsoup4>=4.12.2",
  "asf_search>=3.0.0",
  "boto3>=1.34.0",
  "folium>=0.14.0",
  "PyYAML>=6.0",
  "simplekml>=1.3.0",
  "pyvista>=0.43.0",
  "pandas>=2.0.0",
]

[project.scripts]
geoanomaly = "geoanomaly:main"
geoanomaly-validation = "blind_validation:main"
blind-validation = "blind_validation:main"

[project.urls]
Homepage = "https://example.invalid/geoanomaly-mapper"
Documentation = "https://example.invalid/geoanomaly-mapper/docs"

[tool.setuptools]
include-package-data = false
py-modules = [
  "blind_validation",
  "check",
  "controlled_void_regression",
  "embedding_target_discovery",
  "geoanomaly",
  "json_utils",
  "parse_results",
  "pinn_vibro_inversion",
  "project_paths",
  "run_biondi_exploration",
  "run_full_scan",
  "run_full_scan_remote",
  "run_real_data",
  "sar_vibrometry",
  "satellite_embeddings",
  "slc_data_fetcher",
  "visualize_3d_subsurface",
]

[tool.setuptools.exclude-package-data]
"*" = [".env", ".env.*", "data/*", "results_extracted/*", "downloads/*", "outputs/*", "results/*"]

[tool.ruff]
# audit_handoff is a frozen audit snapshot; results_extracted is downloaded output.
extend-exclude = ["audit_handoff", "results_extracted"]

[tool.ruff.lint.per-file-ignores]
# These runners bootstrap .env credentials before importing pipeline modules.
"run_full_scan.py" = ["E402"]
"run_full_scan_remote.py" = ["E402"]
"run_real_data.py" = ["E402"]
