[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoanomaly-mapper"
version = "0.1.0"
description = "Validation-first SAR Doppler tomography research workflow for blind known-void detection."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "GeoAnomalyMapper maintainers" }
]
keywords = ["sar", "validation", "geophysics", "subsurface", "blind-validation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: Other/Proprietary License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.10.0",
  "rasterio>=1.3.0",
  "pyproj>=3.5.0",
  "xarray>=2024.1.0",
  "h5netcdf>=1.3.0",
  "earthaccess>=0.9.0",
  "asf_search>=6.0.0",
  "hyp3_sdk>=6.0.0",
  "matplotlib>=3.7.0",
  "requests>=2.28.0",
]

[project.scripts]
geoanomaly = "geoanomaly:main"
geoanomaly-validation = "blind_validation:main"
blind-validation = "blind_validation:main"

[project.urls]
Homepage = "https://example.invalid/geoanomaly-mapper"
Documentation = "https://example.invalid/geoanomaly-mapper/docs"

[tool.setuptools]
include-package-data = false
py-modules = [
  "blind_validation",
  "geoanomaly",
  "json_utils",
  "project_paths",
  "slc_data_fetcher",
]
packages = ["deformation_intel"]

[tool.setuptools.exclude-package-data]
"*" = [".env", ".env.*", "data/*", "results_extracted/*", "downloads/*", "outputs/*", "results/*"]

[tool.ruff]
# audit_handoff is a frozen audit snapshot; results_extracted is downloaded output.
extend-exclude = ["audit_handoff", "results_extracted"]

[tool.ruff.lint.per-file-ignores]
# Prototype drivers bootstrap sys.path/env before importing project modules.
"tools/insar_prototype/*.py" = ["E402", "F401", "E741", "E702"]
